all sections complete, all that is left debugging. bugs: buttons different sizes. img_with_subtext too small. placeholder_img hight stretched. button corners  not quite round.

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ button {
     color: #F9FAF8;
     padding: 4px 16px;
     border-radius: 10%;
+    border-color: white;
 }
 
 ul {
@@ -131,5 +132,8 @@ h4 {
 }
 
 .footer {
-    
+    padding: 16px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
